Add link to GitHub Repo as native  Web Component.

--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
 
 		<title>JavaScript's Journey</title>
 
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 		<link rel='stylesheet' href='index.css'>
 		<script src='components/cdc-footer.js' defer></script>
+		<script src='components/github-repo.js' defer></script>
 	</head>
 
 	<body>
 		<header>
 		<h1>JavaScript's Journey</h1>
 		<p><em>by Ariadne Engelbrecht</em></p>
+    <github-repo></github-repo>
 		</header>
 
 		<main>
